--- a/styles.css
+++ b/styles.css
@@ -110,12 +110,16 @@ h1 span {
     position: relative;
     top: 20px;
     display: inline-block;
-    animation: bounce 0.3s ease infinite alternate;
+    animation: none;
     font-size: 75px;
     color: #fff;
     text-shadow: 0 1px 0 #ccc, 0 2px 0 #ccc, 0 3px 0 #ccc, 0 4px 0 #ccc,
         0 5px 0 #ccc, 0 6px 0 transparent, 0 7px 0 transparent, 0 8px 0 transparent,
         0 9px 0 transparent, 0 10px 10px rgba(0, 0, 0, 0.4);
+}
+
+.animation-on h1 span {
+    animation: bounce 0.3s ease infinite alternate;
 }
 
 h1 span:nth-child(1) {
